@@ -1,40 +1,42 @@
 package com.coremedia.blueprint.common.services.validation;
 
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
+import static java.lang.invoke.MethodHandles.lookup;
 
 public abstract class AbstractValidator<T> implements Validator<T> {
 
-  private static final Logger LOG = LoggerFactory.getLogger(AbstractValidator.class);
-
-  // --- Validator --------------------------------------------------
+  private static final Logger LOG = LoggerFactory.getLogger(lookup().lookupClass());
 
   /**
    * @param source The objects to be filtered
    * @return the filtered objects
    */
+  @NonNull
   @Override
-  public <R extends T> List<R> filterList(List<R> source) {
-    List<R> linkables = internallyFilterList(source);
-    return new ArrayList<>(linkables);
+  public <R extends T> List<R> filterList(@NonNull List<R> source) {
+    return internallyFilterList(source);
   }
 
   /**
    * @param source A single object to be tested
-   * @return true if valid, false otherwise
+   * @return true if valid, false otherwise. <code>null</code> is considered to be invalid.
    */
   @Override
-  public boolean validate(T source) {
-    List<? extends T> results = filterList(Collections.singletonList(source));
-    return !results.isEmpty();
+  public boolean validate(@Nullable T source) {
+    if (source == null) {
+      return false;
+    }
+    return !filterList(List.of(source)).isEmpty();
   }
-
-  // --- abstract ---------------------------------------------------
 
   protected abstract Predicate<T> createPredicate();
 
@@ -42,40 +44,36 @@ public abstract class AbstractValidator<T> implements Validator<T> {
     LOG.debug("The default implementation is not adding any dependencies");
   }
 
-  // --- internal ---------------------------------------------------
-
   /**
    * internal method which will be called by any implementing validation service
    *
    * @param allItems the items to be filtered
-   * @return the filtered objects or null
+   * @return the filtered objects
    */
-  private <R extends T> List<R> internallyFilterList(List<R> allItems) {
-    //fist collect all valid items
-    LOG.debug("Before selecting the list contained {} items ({})", allItems.size(), allItems);
+  private <R extends T> List<R> internallyFilterList(@NonNull List<R> allItems) {
+    LOG.debug("Before filtering the list contained {} items ({}).", allItems.size(), allItems);
 
-    List<R> validItems = new ArrayList<>();
     Predicate<T> predicate = createPredicate();
-    for (R item : allItems) {
-      if (supports(item.getClass())) {
-        try {
-          if (predicate.test(item)) {
-            validItems.add(item);
-          }
-        } catch (Exception e) {
-          if (LOG.isDebugEnabled()) {
-            LOG.debug("caught exception while validating item '{}'", item, e);
-          }
-          else {
-            LOG.info("caught exception while validating item '{}': {}", item, e.getMessage());
-          }
-        }
-      } else {
-        validItems.add(item);
-      }
-    }
-    LOG.debug("Afterwards {} items ({})", validItems.size(), validItems);
+    List<R> validItems = allItems.stream()
+            .filter(Objects::nonNull)
+            .filter(item -> filterIfSupported(item, predicate))
+            .collect(Collectors.toList());
+
+    LOG.debug("Afterwards {} items ({}).", validItems.size(), validItems);
     addCustomDependencies(allItems);
     return validItems;
+  }
+
+  private boolean filterIfSupported(T item, Predicate<T> predicate) {
+    try {
+      return !supports(item.getClass()) || predicate.test(item);
+    } catch (Exception e) {
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("Caught exception while validating item '{}'.", item, e);
+      } else {
+        LOG.info("Caught exception while validating item '{}': {} (stacktrace on DEBUG level). ", item, e.getMessage());
+      }
+      return false;
+    }
   }
 }
